--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ var _hmt = _hmt || [];
                     <div class="box">
                         <h2 class="sk-text-center sk-text-bold subtitle sk-mb-1">本站服务信息</h2><br>
                         <p class="sk-text-center sk-text-small"><span id="sitetime">运行 ?年 ?天 ?小时 ?分钟 ?秒</span><br>
-                        <span id="tongjio"><script type="text/javascript" src="//quote.51.la/q?id=20510953&mb=5"></script></span><br><br></p>
+                        <span id="busuanzi_container_site_pv">本站服务<span id="busuanzi_value_site_pv"></span>次</span><span id="tongjio"><script type="text/javascript" src="//quote.51.la/q?id=20510953&mb=5"></script></span><br><br></p>
                     </div>
                 </div>
                 <div class="column">
@@ -256,6 +256,7 @@ var _hmt = _hmt || [];
                 <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
                 <script src="https://ipv4.ip.sb/addrinfo?callback=IP.getIpsbIP"></script>
             <script src="/js/ipcx.cc.js"></script>
+            <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
         </section>
     </div>
 </body>
